Build: use local repo

--- a/build
+++ b/build
@@ -3,7 +3,7 @@
 function buildme
     echo Now building (basename $argv)
     cd $argv
-    sudo solbuild build package.yml -p unstable-x86_64
+    sudo solbuild build package.yml -p local-unstable-x86_64
     sudo rm /var/lib/solbuild/local/(basename $argv)*.eopkg
     sudo mv *.eopkg /var/lib/solbuild/local
     cd ..
