--- a/waifu2x/package.yml
+++ b/waifu2x/package.yml
@@ -14,6 +14,8 @@ rundeps    :
     - ocl-icd
     - opencl-headers
     - opencv
+patterns   :
+    - converter : /usr
 setup      : |
     %cmake
 build      : |
