--- a/nvimpager/package.yml
+++ b/nvimpager/package.yml
@@ -14,6 +14,7 @@ builddeps  :
 rundeps    :
     - neovim
 setup      : |
+    xz -d $pkgfiles/AnsiEsc.vba.xz
     cp $pkgfiles/AnsiEsc.vba .
 build      : |
     %make PREFIX=%PREFIX% DESTDIR=%installroot%
