Better waifu2x package name

--- a/waifu2x/package.yml
+++ b/waifu2x/package.yml
@@ -15,7 +15,7 @@ rundeps    :
     - opencl-headers
     - opencv
 patterns   :
-    - converter : /usr
+    - converter-cpp : /usr
 setup      : |
     %cmake
 build      : |
