--- a/build
+++ b/build
@@ -3,7 +3,7 @@
 function buildme
     echo Now building (basename $argv)
     cd $argv
-    sudo solbuild build package.yml -p local-unstable-x86_64
+    sudo solbuild build package.yml -p local-unstable-x86_64 -d
     sudo rm /var/lib/solbuild/local/(basename $argv)*.eopkg
     sudo mv *.eopkg /var/lib/solbuild/local
     cd ..
@@ -20,5 +20,7 @@ else
     ./build (ls -d */)
 end
 
+sudo mv (fd -e eopkg) /var/lib/solbuild/local/
 cd /var/lib/solbuild/local/
 sudo eopkg index --skip-signing /var/lib/solbuild/local/
+sudo eopkg ur
