--- a/build
+++ b/build
@@ -1,30 +1,21 @@
 #!/usr/bin/fish
-sudo mkdir -p /var/lib/solbuild/local/
-sudo eopkg it solbuild-config-local-unstable
-sudo solbuild init
 
 function buildme
     echo Now building (basename $argv)
     cd $argv
     sudo solbuild build package.yml -d
-    sudo rm /var/lib/solbuild/local/(basename $argv)*.eopkg
-    sudo mv *.eopkg /var/lib/solbuild/local
+    sudo eopkg it *.eopkg
     cd ..
 end
 
 cd (dirname (realpath (status -f)))
+
+sudo solbuild init
 
 if test "$argv"
     for i in $argv
         buildme $i
     end
 else
-    sudo rm /var/lib/solbuild/local/*.eopkg
-    ./build (cat list)
+    sudo ./build (cat list)
 end
-
-sudo mv (fd -e eopkg) /var/lib/solbuild/local/
-cd /var/lib/solbuild/local/
-sudo eopkg index --skip-signing /var/lib/solbuild/local/
-sudo eopkg ur
-sudo eopkg it --reinstall (basename $argv)
