--- a/ddccontrol/package.yml
+++ b/ddccontrol/package.yml
@@ -1,19 +1,22 @@
-name       : ddcui
+name       : ddccontrol
 version    : 1
 release    : 1
 source     :
-    - git|https://github.com/rockowitz/ddcui.git : master
+    - git|https://github.com/ddccontrol/ddccontrol.git : master
 license    : GPL-2.0-or-later
 summary    : Insert summary here
 description: |
     Insert description here
 builddeps  :
-    - pkgconfig(Qt5Help)
-    - pkgconfig(ddcutil)
+    - i2c-tools
+    - pkgconfig(gtk+-2.0)
+    - pkgconfig(libpci)
 rundeps    :
-    - ddcutil
+    - i2c-tools
+    - pciutils
 setup      : |
-    %cmake
+    ./autogen.sh
+    %configure --sysconfdir=/etc
 build      : |
     %make
 install    : |
