Remove some packages that are in official repos
Removes castor for sucking, starship for being included, dolphin-emu-git because Solus's is up-to-date

--- a/hid-nintendo/package.yml
+++ b/hid-nintendo/package.yml
@@ -1,9 +1,9 @@
 name       : hid-nintendo
-version    : 2.0
+version    : 3.0
 release    : 1
 homepage   : https://github.com/nicman23/dkms-hid-nintendo
 source     :
-    - git|https://github.com/nicman23/dkms-hid-nintendo.git : 3fe4a5856999fed4d2cf8e9ff6553bbb69f3835c
+    - git|https://github.com/nicman23/dkms-hid-nintendo.git : master
 license    : GPL-2.0-or-later
 summary    : A kernel driver for the Nintendo Switch Pro Controllers and the Joy-Cons.
 description: |
