--- a/build
+++ b/build
@@ -1,16 +1,18 @@
 #!/usr/bin/fish
+set profile "-punstable-x86_64"
 
 function buildme
     echo Now building (basename $argv)
     cd $argv
-    sudo solbuild build package.yml -d
+    sudo solbuild build package.yml -d $profile
     sudo eopkg it --reinstall (basename $argv)*.eopkg
     cd ..
 end
 
 cd (dirname (realpath (status -f)))
 
-sudo solbuild init
+sudo solbuild init $profile
+sudo solbuild update $profile
 
 if test "$argv"
     for i in $argv
