--- a/earlyoom/package.yml
+++ b/earlyoom/package.yml
@@ -8,6 +8,6 @@ summary    : Insert summary here
 description: |
     Insert description here
 build      : |
-    %make PREFIX=%PREFIX% SYSTEMDUNITDIR=%libdir%/systemd/system earlyoom
+    %make
 install    : |
     %make_install PREFIX=%PREFIX% SYSTEMDUNITDIR=%libdir%/systemd/system earlyoom
