--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "common"]
 	path = common
 	url = sol:common
+[submodule "qutebrowser"]
+	path = qutebrowser
+	url = sol:qutebrowser
+[submodule "starship"]
+	path = starship
+	url = sol:starship
+[submodule "dolphin-emu"]
+	path = dolphin-emu
+	url = sol:dolphin-emu
