--- a/earlyoom/package.yml
+++ b/earlyoom/package.yml
@@ -8,6 +8,6 @@ summary    : Insert summary here
 description: |
     Insert description here
 build      : |
-    %make
+    %make PREFIX=/usr SYSTEMDUNITDIR=%libdir%/systemd/system earlyoom
 install    : |
-    %make_install PREFIX=%PREFIX% SYSTEMDUNITDIR=%libdir%/systemd/system earlyoom
+    %make_install PREFIX=/usr SYSTEMDUNITDIR=%libdir%/systemd/system earlyoom
