--- a/package.yml
+++ b/package.yml
@@ -5,8 +5,7 @@ source     :
     - git| : master
 license    : GPL-2.0-or-later
 summary    : Insert summary here
-description: |
-    Insert description here
+description: Insert description here
 builddeps  :
     - pkgconfig(example)
 setup      : |
