--- a/torsocks/package.yml
+++ b/torsocks/package.yml
@@ -2,7 +2,7 @@ name       : torsocks
 version    : 1
 release    : 1
 source     :
-    - git|https://git.torproject.org/torsocks.git : master
+    - git|https://github.com/dgoulet/torsocks.git : master
 license    : GPL-2.0-or-later
 summary    : Insert summary here
 description: |
