--- a/libjxl/package.yml
+++ b/libjxl/package.yml
@@ -17,7 +17,7 @@ builddeps  :
     - pkgconfig(OpenEXR)
     - giflib-devel
 setup      : |
-    %cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=OFF -DJPEGXL_ENABLE_PLUGINS=true
+    %cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=OFF -DJPEGXL_ENABLE_PLUGINS=true -DJPEGXL_FORCE_SYSTEM_BROTLI=true
 build      : |
     %make
 install    : |
